[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/tools/Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/tools/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/tools/GridBasedUI.gd" type="Script" id=6]
[ext_resource path="res://src/tools/MapLoader.gd" type="Script" id=7]

[node name="GridBasedUI" type="Node2D"]
script = ExtResource( 6 )
map_path = "res://data/maps/dao-map/lak506d.map"
editor_starts_goals = [ Quat( 0, -4, 0, 4 ), Quat( 0, 4, 0, -4 ), Quat( -4, 0, 4, 0 ) ]

[node name="UserInterface" parent="." instance=ExtResource( 1 )]

[node name="Grid" parent="." instance=ExtResource( 2 )]
show_behind_parent = true
tile_data = PoolIntArray( -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0 )

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="MapLoader" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Agents" type="Node2D" parent="."]
[connection signal="algorithms_id_pressed" from="UserInterface" to="." method="_on_UserInterface_algorithms_id_pressed"]
[connection signal="button_pressed" from="UserInterface" to="." method="_on_UserInterface_button_pressed"]
[connection signal="options_id_pressed" from="UserInterface" to="." method="_on_UserInterface_options_id_pressed"]
